# tlk-utils

./: CMakeLists.txt  LICENSE  README.md
lib/: libtlk.cpp  libtlk.h
utils/: tlkcombine.cpp  tlkreplace.cpp  tlkview.cpp
